--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,21 @@
-Aqui descansa la app de gamez en paz
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>SigmaBot</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  </head>
+
+  <body id="page-top">
+    Aqui descansa la app de gamez en paz
+
+  </body>
+  </html>
