--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contacto</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="privacy.html">Términos y condiciones</a>
+            </li>
           </ul>
         </div>
       </div>
