--- a/terms.html
+++ b/terms.html
@@ -8,13 +8,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SigmaBot</title>
+    <title>Terms</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   </head>
 
   <body id="page-top">
-    Aqui descansa la app de gamez en paz
+    Terms here
 
   </body>
+  </html>
