--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
               <a class="nav-link js-scroll-trigger" href="#contact">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="privacy.html">Términos y condiciones</a>
+              <a class="nav-link js-scroll-trigger" href="privacy.html">Privacidad</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="terms.html">Términos</a>
             </li>
           </ul>
         </div>
