--- a/index.html
+++ b/index.html
@@ -42,13 +42,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">Descargar</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#features">Características</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contacto</a>
+              <a class="nav-link js-scroll-trigger" href="#download">Descargar</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="privacy.html">Privacidad</a>
@@ -89,20 +86,6 @@
       </div>
     </header>
 
-    <section class="download bg-primary text-center" id="download">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 mx-auto">
-            <h2 class="section-heading">Discover what all the buzz is about!</h2>
-            <p>Our app is available on any mobile device! Download now to get started!</p>
-            <div class="badges">
-              <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-              <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <section class="features" id="features">
       <div class="container">
@@ -141,23 +124,23 @@
                   <div class="feature-item">
                     <i class="icon-social-facebook text-primary"></i>
                     <h3>Feisbu</h3>
-                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                    <p class="text-muted">Tú bot en una de las redes de mensajerías de mensaje mas grandes en un solo click</p>
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-lg-6">
                   <div class="feature-item">
-                    <i class="icon-present text-primary"></i>
-                    <h3>Free to Use</h3>
-                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                    <i class="icon-social-twitter text-primary"></i>
+                    <h3>Twitter</h3>
+                    <p class="text-muted">¿Cuenta de twitter? el bot se encargará</p>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="feature-item">
                     <i class="icon-lock-open text-primary"></i>
-                    <h3>Open Source</h3>
-                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                    <h3>Y muchas otras más¡!</h3>
+                    <p class="text-muted">Incluyendo Slack, Telegram, Line, etc.</p>
                   </div>
                 </div>
               </div>
@@ -167,6 +150,28 @@
       </div>
     </section>
 
+
+
+        <section class="download bg-primary text-center" id="download">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-8 mx-auto">
+                <h2 class="section-heading">¡Prueba descargando nuestro bot en skype!</h2>
+                <p>Contacta a nuestro bot mandándole mensaje al siguiente contacto: </p>
+                <center><p><b>usuFALTADEFINIR</b></p></center>
+        <!--
+                <div class="badges">
+
+                  <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
+                  <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+
+                </div>
+                  -->
+              </div>
+            </div>
+          </div>
+        </section>
+<!--
     <section class="cta">
       <div class="cta-content">
         <div class="container">
@@ -201,16 +206,16 @@
         </ul>
       </div>
     </section>
-
+-->
     <footer>
       <div class="container">
-        <p>&copy; 2017 Start Bootstrap. All Rights Reserved.</p>
+        <p>&copy; 2017 Taco Team.</p>
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a href="#">Privacy</a>
+            <a href="privacy.html">Privacy</a>
           </li>
           <li class="list-inline-item">
-            <a href="#">Terms</a>
+            <a href="terms.html">Terms</a>
           </li>
           <li class="list-inline-item">
             <a href="#">FAQ</a>
