--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="css/new-age.min.css" rel="stylesheet">
+    <link href="css/new-age.css" rel="stylesheet">
 
   </head>
 
@@ -115,7 +115,7 @@
               <div class="row">
                 <div class="col-lg-6">
                   <div class="feature-item">
-                    <i class="icon-social-facebook text-primary"></i>
+                    <i class=" icon-user text-primary"></i>
                     <h3>Skype</h3>
                     <p class="text-muted">Integrarlo a Skype Empresarial nunca fue tan sencillo</p>
                   </div>
@@ -123,7 +123,7 @@
                 <div class="col-lg-6">
                   <div class="feature-item">
                     <i class="icon-social-facebook text-primary"></i>
-                    <h3>Feisbu</h3>
+                    <h3>Facebook</h3>
                     <p class="text-muted">Tú bot en una de las redes de mensajerías de mensaje mas grandes en un solo click</p>
                   </div>
                 </div>
@@ -158,7 +158,7 @@
               <div class="col-md-8 mx-auto">
                 <h2 class="section-heading">¡Prueba descargando nuestro bot en skype!</h2>
                 <p>Contacta a nuestro bot mandándole mensaje al siguiente contacto: </p>
-                <center><p><b>usuFALTADEFINIR</b></p></center>
+              <a href="https://join.skype.com/bot/5fca3b82-2a66-4a4f-b232-75a8bcd10675" id="pro" > <center><p><b>Sigma bot</b></p></center></a>
         <!--
                 <div class="badges">
 
